--- a/georgios-tsolakis-gt939/w3_epidoc/inscriptions_from_aphrodisias.ipynb
+++ b/georgios-tsolakis-gt939/w3_epidoc/inscriptions_from_aphrodisias.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 87,
    "metadata": {
     "collapsed": false
    },
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 88,
    "metadata": {
     "collapsed": false
    },
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 89,
    "metadata": {
     "collapsed": false
    },
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 90,
    "metadata": {
     "collapsed": false
    },
@@ -324,18 +324,10 @@
      "text": [
       "\n",
       "Invocation of family tradition:\n",
-      "πρῶτοι καὶ ἐνδοξότατοι πολείται\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'idno' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-74-fed869caf831>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      9\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0melement\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mattrib\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"type\"\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;34m\"family_tradition\"\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m             \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0melement\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mattrib\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"key\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 11\u001b[1;33m             \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0midno\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'idno' is not defined"
+      "πρῶτοι καὶ ἐνδοξότατοι πολείται\n",
+      "γένους τοῦ πρώτου καὶ συνεκτικότος τὴν πατρίδα καὶ ἐν γυμνασ̣[ι]αρχίαις καὶ στεφανηφορ[ίαι]ς γεγονότος\n",
+      "διὰ προγόνων ζήσαντα καλῶς καὶ σωφρόνως καὶ ἐπ′ ἀρετῆι καὶ καλοκαγαθίαι\n",
+      "προγόνων ὑπάρχοντα κα̣[·· c. 4 ··]ς καλῶν καὶ ἀγαθῶν καὶ πολλὰς καὶ μεγάλας ε[ὐεργεσί]ας εἰς τὸν δῆμον κατατεθειμένων καὶ συνεκ[τικ]ότων τὸν δῆμον\n"
      ]
     }
    ],
@@ -347,7 +339,8 @@
     "    xml_elements = ET.fromstring(tei_as_string)\n",
     "    elements = xml_elements.findall('.//{http://www.tei-c.org/ns/1.0}rs')\n",
     "    \n",
-    "    for p in xml_elements.findall('.//p'):\n",
+    "  \n",
+    "        \n",
     "    for element in elements:\n",
     "        if element.attrib[\"type\"] == \"family_tradition\":\n",
     "            print(element.attrib[\"key\"])"
@@ -362,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 91,
    "metadata": {
     "collapsed": false
    },
@@ -372,21 +365,36 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Citizens's bodies:\n",
+      "Citizen Bodies:\n",
+      "βουλή appears as:\n",
       "βουλῆι\n",
+      "δῆμος appears as:\n",
       "None\n",
+      "δῆμος appears as:\n",
       "δῆμον\n",
+      "δῆμος appears as:\n",
       "πατρίδα\n",
+      "δῆμος appears as:\n",
       "δῆμον\n",
+      "πατρίς appears as:\n",
       "None\n",
+      "πόλις appears as:\n",
       "πόλιν\n",
+      "βουλή appears as:\n",
       "βουλῇ\n",
+      "δῆμος appears as:\n",
       "δήμωι\n",
+      "βουλή appears as:\n",
       "βουλῆς\n",
+      "δῆμος appears as:\n",
       "δήμου\n",
+      "βουλή appears as:\n",
       " \n",
+      "δῆμος appears as:\n",
       "None\n",
+      "βουλή appears as:\n",
       "None\n",
+      "δῆμος appears as:\n",
       "None\n"
      ]
     }
@@ -404,17 +412,9 @@
     "        \n",
     "    for element in elements:\n",
     "        if element.attrib['type'] == \"citizen_body\":\n",
+    "            print(element.attrib[\"key\"] + \" appears as:\")\n",
     "            print(element.text)  "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
