--- a/bayani-narges-nargesbayani/tei narges.ipynb
+++ b/bayani-narges-nargesbayani/tei narges.ipynb
@@ -647,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {
     "button": false,
     "collapsed": false,
@@ -663,7 +663,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "List the place mentioned in the inscription:\n",
+      "List the place mentioned in the text:\n",
       "Treasure Hill\n",
       "Tepe Hissar\n",
       "Treasure Hill\n",
@@ -675,7 +675,7 @@
       "Treasure Hill\n",
       "Treasure Hill\n",
       "\n",
-      "List the rs mentioned in the inscription:\n",
+      "List the rs mentioned in the text:\n",
       "DH05\n",
       "CH95\n",
       "DH05\n",
@@ -686,8 +686,8 @@
       "CH95\n",
       "CH95\n",
       "\n",
-      "List the rs mentioned in the inscription:\n",
-      " burial sheets\n",
+      "List the rs mentioned in the text:\n",
+      "burial sheets\n",
       "object cards\n",
       "drawn plans\n",
       "photographs\n",
@@ -717,19 +717,19 @@
     "\n",
     "# if you are using your own TEI, you might need to change the XPATH so that is meaningful for your data\n",
     "\n",
-    "print(\"\\nList the place mentioned in the inscription:\")\n",
+    "print(\"\\nList the place mentioned in the text:\")\n",
     "elements = xml_elements.findall('.//{http://www.tei-c.org/ns/1.0}placeName')\n",
     "for element in elements:\n",
     "    print(element.text)\n",
     "    \n",
     "    \n",
-    "print(\"\\nList the rs mentioned in the inscription:\")\n",
+    "print(\"\\nList the rs mentioned in the text:\")\n",
     "elements = xml_elements.findall('.//{http://www.tei-c.org/ns/1.0}rs')\n",
     "for element in elements:\n",
     "    if element.attrib['type'] == 'plot':\n",
     "        print(element.text)\n",
     "        \n",
-    "print(\"\\nList the rs mentioned in the inscription:\")\n",
+    "print(\"\\nList the rs mentioned in the text:\")\n",
     "elements = xml_elements.findall('.//{http://www.tei-c.org/ns/1.0}rs')\n",
     "for element in elements:\n",
     "    if element.attrib['type'] == 'record':\n",
