--- a/stone-kelley-kelleystone/assignment3_teixml.ipynb
+++ b/stone-kelley-kelleystone/assignment3_teixml.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {
     "button": false,
     "collapsed": false,
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {
     "button": false,
     "collapsed": false,
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {
     "button": false,
     "collapsed": false,
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {
     "button": false,
     "collapsed": false,
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {
     "button": false,
     "collapsed": false,
@@ -458,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {
     "button": false,
     "collapsed": false,
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {
     "button": false,
     "collapsed": false,
@@ -515,14 +515,102 @@
    },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'ET' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-18-0203a267a037>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mtei_as_string\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdecode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'utf-8'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mxml_elements\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mET\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfromstring\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtei_as_string\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;31m# IMPORTANT: In the findall(...) statements that follow,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'ET' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "List found elements:\n",
+      "{'n': '1'}\n",
+      "{'n': '2'}\n",
+      "{'n': '3'}\n",
+      "{'n': '4'}\n",
+      "{'n': '5'}\n",
+      "{'n': '6'}\n",
+      "{'n': '7'}\n",
+      "{'n': '8'}\n",
+      "{'n': '9'}\n",
+      "{'n': '10'}\n",
+      "{'n': '1'}\n",
+      "{'n': '2'}\n",
+      "{'n': '3'}\n",
+      "{'n': '4'}\n",
+      "{'n': '5'}\n",
+      "{'n': '6'}\n",
+      "{'n': '7'}\n",
+      "{'n': '8'}\n",
+      "{'n': '9'}\n",
+      "{'n': '10'}\n",
+      "{'n': '11'}\n",
+      "{'n': '12'}\n",
+      "{'n': '13'}\n",
+      "{'n': '14'}\n",
+      "{'n': '15'}\n",
+      "{'n': '16'}\n",
+      "{'n': '17'}\n",
+      "{'n': '18'}\n",
+      "{'n': '19'}\n",
+      "{'n': '20'}\n",
+      "{'n': '21'}\n",
+      "{'n': '22'}\n",
+      "{'n': '23'}\n",
+      "{'n': '24'}\n",
+      "{'n': '25'}\n",
+      "{'n': '26'}\n",
+      "{'n': '27'}\n",
+      "{'n': '28'}\n",
+      "{'n': '29'}\n",
+      "{'n': '30'}\n",
+      "{'n': '31'}\n",
+      "{'n': '32'}\n",
+      "{'n': '33'}\n",
+      "{'n': '1'}\n",
+      "{'n': '2'}\n",
+      "{'n': '3'}\n",
+      "{'n': '4'}\n",
+      "{'n': '5'}\n",
+      "{'n': '6'}\n",
+      "{'n': '7'}\n",
+      "\n",
+      "List the text of found elements:\n",
+      "Dionysus'\n",
+      "Zeus\n",
+      "Semele\n",
+      "Cadmus\n",
+      "Hera's\n",
+      "Cadmus\n",
+      "Dionysus\n",
+      "Zeus\n",
+      "Semele\n",
+      "Zeus\n",
+      "Cadmus\n",
+      "Zeus\n",
+      "Cadmus\n",
+      "Zeus\n",
+      "Cadmus\n",
+      "Pentheus\n",
+      "Cadmus\n",
+      "Rhea\n",
+      "List the value attributes of found elements\n",
+      "Thebes\n",
+      "Dirce's\n",
+      "Ismenus\n",
+      "Lydia's\n",
+      "Phrygia\n",
+      "Persia's\n",
+      "Bactria's\n",
+      "Media's\n",
+      "Arabia\n",
+      "Asia's\n",
+      "Hellas\n",
+      "Thebes\n",
+      "Hellas\n",
+      "Thebes\n",
+      "Thebes\n",
+      "Tmolus\n",
+      "Lydia\n",
+      "Pentheus\n",
+      "Cadmus\n",
+      "Cithaeron's\n"
      ]
     }
    ],
@@ -545,7 +633,7 @@
     "# element.tag returns the name of the current element\n",
     "elements = xml_elements.findall('.//{http://www.tei-c.org/ns/1.0}lb')\n",
     "for element in elements:\n",
-    "    print(element.attribute)\n",
+    "    print(element.attrib)\n",
     "\n",
     "print(\"\\nList the text of found elements:\")\n",
     "# element.text returns the text content of the current element. Here 'expan' elements are found.\n",
@@ -597,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {
     "button": false,
     "collapsed": false,
@@ -609,14 +697,49 @@
    },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'ET' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-15-13e2b7076666>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mtei_as_string\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdecode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'utf-8'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0mxml_elements\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mET\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfromstring\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtei_as_string\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"List of the people in Dionysus first dialog:\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'ET' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "List of the people in Dionysus first dialog:\n",
+      "Dionysus'\n",
+      "Zeus\n",
+      "Semele\n",
+      "Cadmus\n",
+      "Hera's\n",
+      "Cadmus\n",
+      "Dionysus\n",
+      "Zeus\n",
+      "Semele\n",
+      "Zeus\n",
+      "Cadmus\n",
+      "Zeus\n",
+      "Cadmus\n",
+      "Zeus\n",
+      "Cadmus\n",
+      "Pentheus\n",
+      "Cadmus\n",
+      "Rhea\n",
+      "List of the places in Dionysus first dialog:\n",
+      "Thebes\n",
+      "Dirce's\n",
+      "Ismenus\n",
+      "Lydia's\n",
+      "Phrygia\n",
+      "Persia's\n",
+      "Bactria's\n",
+      "Media's\n",
+      "Arabia\n",
+      "Asia's\n",
+      "Hellas\n",
+      "Thebes\n",
+      "Hellas\n",
+      "Thebes\n",
+      "Thebes\n",
+      "Tmolus\n",
+      "Lydia\n",
+      "Pentheus\n",
+      "Cadmus\n",
+      "Cithaeron's\n"
      ]
     }
    ],
