--- a/cole-emily-ecccole/tei-processing.ipynb
+++ b/cole-emily-ecccole/tei-processing.ipynb
@@ -534,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
@@ -556,6 +556,11 @@
       "ἑβδόμηι\n",
       "ἑπτακαι\n",
       "\n",
+      "Greek Date:\n",
+      "-------------------Βασιλεύοντος-----------------------Πτολεμαίου-------------τοῦ-----------------------Πτολεμαίου------------καὶ------------------------Ἀρσινόης-----------,-θεῶν-Ἀδελφῶν,-ἔτους------ἐνάτου------,-ἐφ'-ἱερέως-------------------------Ἀπολλωνίδου------------τοῦ\n",
+      "-------------------------------------------------------Μοσχίωνος----------------------------------Ἀλεξάνδρου------------καὶ-θεῶν-Ἀδελφῶν-καὶ-θεῶν-Εὐεργετῶν,-κανηφόρου------------------------Ἀρσινόη------------------------ς--------------------------------------------------Φιλαδέλφου-Μενεκρατείας-----------\n",
+      "-------------------------------τῆς---------------------v-------Φιλάμμονος-----------,-μηνὸς-Ἀπελλαίου------ἑβδόμηι-------------,\n",
+      "\n",
       "Words with λε:\n",
       "type=\"Greek\">Βασιλεύοντος\n",
       "type=\"king\">Πτολεμαίου\n",
@@ -565,6 +570,8 @@
     }
    ],
    "source": [
+    "import urllib.request\n",
+    "\n",
     "url_to_load = \"https://isaw-ga-3024.github.io/cole-emily-ecccole/XML_docs/canopus_decree.xml\"\n",
     "\n",
     "f = urllib.request.urlopen(url_to_load)\n",
@@ -594,6 +601,24 @@
     "elements = xml_elements.findall('.//{http://www.tei-c.org/ns/1.0}num')\n",
     "for element in elements:\n",
     "        print(element.text)\n",
+    " \n",
+    "print(\"\\nGreek Date:\")\n",
+    "start_tag = '<date type=\"Greek\">' \n",
+    "end_tag =  '</date>'\n",
+    "\n",
+    "start_index = tei_as_string.find(start_tag)\n",
+    "\n",
+    "tmp_end_index = tei_as_string[start_index:].find(end_tag)\n",
+    "\n",
+    "end_index = start_index + tmp_end_index + len(end_tag) + 1\n",
+    "\n",
+    "def remove_punc(text):\n",
+    "    tags = '\"<date type=\"Greek\">\"\"<persName type=\"king\">\"\"</persName>\"\"<num>\"\"</num>\"\"<persName type=\"queen\">\"\"</supplied>\"\"<supplied reason=\"lost\">\"\"<lb n=\"2\"/>\"\"<lb n=\"3\"/>\"'\n",
+    "    for tag in tags:\n",
+    "        text = text.replace(tag, \"-\")\n",
+    "    return text\n",
+    "text = tei_as_string[start_index:end_index]\n",
+    "print(remove_punc(text))\n",
     "        \n",
     "words = tei_as_string.split()\n",
     "\n",
