--- a/miller-marlee-marleemh/ItalianLudiXML/Caligula.Rome.2
+++ b/miller-marlee-marleemh/ItalianLudiXML/Caligula.Rome.2
@@ -57,8 +57,8 @@
                        <l n="2"/>     exquirens per se pretia et usque eo extendens,
                        <l n="3"/>     ut quidam immenso coacti quaedam emere ac bonis exuti uenas sibi inciderent. 
                        <l n="4"/>     nota res est, Aponio Saturnino inter subsellia dormitante,
-                       <l n="5"/>     monitum a <persname type ="founder/emperor">Gaio</persname> praeconem ne praetorium uirum crebro capitis motu nutantem sibi praeteriret, 
-                       <l n="6"/>    nec licendi finem factum, quoad <persName type ="gladiator">tredecim gladiatores<persName> sestertium nonagies ignoranti addicerentur.
+                       <l n="5"/>     monitum a <persName type ="founder/emperor">Gaio</persName> praeconem ne praetorium uirum crebro capitis motu nutantem sibi praeteriret, 
+                       <l n="6"/>    nec licendi finem factum, quoad <persName type ="gladiator">tredecim gladiatores</persName> sestertium nonagies ignoranti addicerentur.
                 </ab> 
             </div> 
             <div type="apparatus">
