--- a/miller-marlee-marleemh/OtherXMLProject/MarleeMDHProject.ipynb
+++ b/miller-marlee-marleemh/OtherXMLProject/MarleeMDHProject.ipynb
@@ -1857,7 +1857,7 @@
       "            <sourceDesc>\n",
       "                <msDesc>\n",
       "                    <msIdentifier>\n",
-      "                        <repository>Corpus Inscriptionae Latinae</repository>\n",
+      "                        <repository>Corpus Inscriptionum Latinarum</repository>\n",
       "                        <idno>inventory number</idno>\n",
       "                    </msIdentifier>\n",
       "                    <physDesc>\n",
@@ -1925,7 +1925,7 @@
       "{'type': 'ludus'}\n",
       "\n",
       "List of persName:\n",
-      "Corpus Inscriptionae Latinae\n"
+      "Corpus Inscriptionum Latinarum\n"
      ]
     }
    ],
